scripts/nullaway/original/url49fd521e8b_Kineolyan_JSpec_tgz-pJ8-fw_MainJ8.txt
../original/url49fd521e8b_Kineolyan_JSpec_tgz-pJ8-fw_MainJ8/src/fw/Test.java:40: error: [NullAway] passing @Nullable parameter 'valueNull' where @NonNull is required
    should(valueNull, BE_NULL);
           ^
    (see http://t.uber.com/nullaway )
1 error
